compiler/src/test/resources/golden/errors/type_set_key_bytes_nested.dawn
type Blob = { name: String, body: Bytes }

fn f(b: Blob) -> Int = {
  var s: Set[Blob] = set_empty()
  s = set_insert(s, b)
  set_size(s)
}
